[gd_scene load_steps=9 format=2]

[ext_resource path="res://addons/anima/fonts/Lato-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/anima/resources/anima-preview.png" type="Texture" id=2]
[ext_resource path="res://addons/anima/fonts/Lato-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/anima/ui/windows/AnimationsWindow.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.101961, 0.12549, 0.172549, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 12.0
content_margin_bottom = 12.0
bg_color = Color( 0.14902, 0.172549, 0.231373, 1 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = ExtResource( 3 )

[node name="AnimationsWindow" type="WindowDialog"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Anima Animations"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 696.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 696.0
margin_bottom = 298.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ControlTest" type="Label" parent="HBoxContainer/VBoxContainer/ControlContainer"]
margin_left = 202.0
margin_top = 88.0
margin_right = 493.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 1 )
text = "Anima"

[node name="SpriteContainer" type="CenterContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 302.0
margin_right = 696.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control2" type="Control" parent="HBoxContainer/VBoxContainer/SpriteContainer"]
margin_left = 348.0
margin_top = 149.0
margin_right = 348.0
margin_bottom = 149.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SpriteTest" type="Sprite" parent="HBoxContainer/VBoxContainer/SpriteContainer/Control2"]
texture = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 700.0
margin_right = 1020.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_right = 320.0
margin_bottom = 24.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_top = 5.0
margin_right = 80.0
margin_bottom = 19.0
rect_min_size = Vector2( 80, 0 )
text = "Search:"

[node name="DurationEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 92.0
margin_right = 320.0
margin_bottom = 24.0
hint_tooltip = "animation..."
size_flags_horizontal = 3
placeholder_text = "Speed in ms"
caret_blink = true
caret_blink_speed = 0.5

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 36.0
margin_right = 320.0
margin_bottom = 544.0
rect_min_size = Vector2( 320, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/bg = SubResource( 2 )

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer2/ScrollContainer"]
margin_right = 320.0
margin_bottom = 508.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 3 )

[node name="ListContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer2/ScrollContainer/PanelContainer"]
margin_left = 12.0
margin_top = 12.0
margin_right = 296.0
margin_bottom = 4304.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 556.0
margin_right = 320.0
margin_bottom = 600.0
custom_constants/margin_right = 12
custom_constants/margin_top = 8
custom_constants/margin_left = 12
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2/MarginContainer"]
margin_left = 12.0
margin_top = 8.0
margin_right = 308.0
margin_bottom = 36.0

[node name="ConfirmButton" type="Button" parent="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
margin_right = 125.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "Use animation"

[node name="Control" type="Control" parent="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 227.0
margin_bottom = 28.0
size_flags_horizontal = 3

[node name="CancelButton" type="Button" parent="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer"]
margin_left = 231.0
margin_right = 296.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 4 )
text = "Cancel"

[node name="Panel" type="Panel" parent="HBoxContainer"]
margin_left = 1024.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/MarginContainer/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
